--- a/front/carrito.html
+++ b/front/carrito.html
@@ -57,5 +57,7 @@
 <script src="./js/carrito.js"></script>
 <script src="./js/menu.js"></script>
 
+<script src="https://checkout.wompi.co/widget.js"></script>
+
 </body>
 </html>
